pushing the project

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
     <title>My first git repo</title>
+     <link rel="stylesheet" href="styles/blog.css">
+
+    <!-- <style>
+
+
+        .div1{
+
+            color: rgb(248, 0, 0);
+            background-color: aqua;
+        }
+
+    </style> -->
+
 </head>
 <body>
-    
+ <p> Making a form </p>
+   <P> 
+        <input type="text"> <br>
+         <input type="password">
+
+
+
+
+   </P> 
+<div >
+    <h2>  practing the git hub  repo</h2>
+        <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores necessitatibus velit numquam, facilis repellendus quisquam debitis quibusdam tempore ipsam tenetur, consequatur molestiae!
+            Quam voluptatibus, esse vitae incidunt possimus deserunt illum.</b></p>
+
+</div>
 </body>
 </html>
