done funny part

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
  <p> Making a form </p>
    <P> 
-        <input type="text"> <br>
-         <input type="password">
+        <input type="text">
+             <input type="password">
 
 
 
@@ -35,5 +35,16 @@
             Quam voluptatibus, esse vitae incidunt possimus deserunt illum.</b></p>
 
 </div>
+
+<!-- <label for="disk"></label>
+
+ <meter id="disk" value=".5"></meter> -->
+
+
+<h3 class="Fuck"> Fuck this world system</h3>
+
+
+
+
 </body>
 </html>
